# fluid-simulation

./: CMakeLists.txt  CMakePresets.json  Makefile  README.md  fluid_cli  fluid_cli.c  particle_sim_cli
app/cli/: CMakeLists.txt  main_cli.c
app/vulkan/: CMakeLists.txt
render/cli/: CMakeLists.txt  ansi.c  ansi.h  frame_rate.c  frame_rate.h  render_cli.c  render_cli.h
render/vk/: CMakeLists.txt
src/: CMakeLists.txt
